<resources>
    <string name="app_name">BluetoothControler</string>
    <string name="title_status">Status</string>
    <string name="title_setting">Setting</string>
    <string name="title_iv">IV</string>
    <string name="title_more">More</string>

    <string name="app_status_connected">Connected</string>
    <string name="app_status_unconnected">Unconnected</string>
    <string name="app_status_device_status">Device Status</string>
    <string name="app_status_recovering">Recovering</string>
    <string name="app_status_unrecoverd">Un-Recoverd</string>
    <string name="app_status_recoverd">Recoverd</string>
    <string name="app_status_before_recover">Before Recovery</string>
    <string name="app_status_after_recover">After Recovery</string>
    <string name="app_status_recover_result">Recoverd result</string>
    <string name="app_status_remark">Remark</string>
    <string name="app_status_recover_rules">Recovery Rules：</string>
    <string name="app_status_default">Default</string>

    <string name="action_settings">Settings</string>

    <string name="start_bluetooth">开启蓝牙</string>
    <string name="show_devices">查询配对设备</string>
    <string name="find_devices">搜索设备</string>
    <string name="connect_devices">连接设备</string>
</resources>
