<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.bloothcontroler.ui.home.HomeFragment"
        android:label="@string/title_status"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.bloothcontroler.ui.dashboard.DashboardFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.bloothcontroler.ui.notifications.NotificationsFragment"
        android:label="@string/title_iv"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.bloothcontroler.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_notifications" />
</navigation>